# tapl

./: LICENSE  README.md
untyped/arith/: dune-project
untyped/arith/lib/: driver.ml  dune  eval.ml  lexer.mll  parser.mly  syntax.ml  util.ml
untyped/arith/test/: dune  test.arith
untyped/arith/test/expected/: test5  test7
untyped/arith/test/suite/: test1.arith  test2.arith  test3.arith  test4.arith  test5.arith  test6.arith  test7.arith
untyped/lambda/: dune-project
untyped/lambda/lib/: driver.ml  dune  eval.ml  lexer.mll  option.ml  parser.mly  pp.ml  syntax.ml  util.ml
untyped/lambda/test/: dune
untyped/lambda/test/expected/: test1  test10  test11  test2  test3  test5  test6  test8  test9
untyped/lambda/test/suite/: test1.lambda  test10.lambda  test11.lambda  test2.lambda  test3.lambda  test4.lambda  test5.lambda  test6.lambda  test7.lambda  test8.lambda  test9.lambda
